hphp/hack/test/package/package_access/cross_package_basic.php.exp.v1
error: Typing[4472] Cannot access global constant FOO defined in package pkg2 which may not be available [1]
-> FOO is defined in cross_package_basic.php--cross_package_basic_foo.php [2]
-> FOO belongs to package pkg2 by this package definition [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_basic.php--bar.php:11:17
     9 | module newtype NBar4 as TFoo = int; // ok
    10 | 
[1] 11 | const int BAR = FOO; // error

cross_package_basic.php--cross_package_basic_foo.php:5:1
     3 | type TFoo = int;
     4 | 
[2]  5 | const int FOO = 3;

PACKAGES.toml:6:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 
[3]  6 | [packages.pkg2]
     7 | include_paths=[
     8 |     "//cross_package_access_internal1_foo.php",

1 error found
